# PBO

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  lqr_q_verify.ipynb  lqr_train_q.ipynb  pbo_car_on_hill.ipynb  pbo_chain_walk.ipynb  pbo_chain_walk_last_iterations.ipynb  pbo_lqr.ipynb  pbo_lqr_iterations.html  pbo_lqr_iterations.ipynb  pbo_lqr_iterations_infinity.html  pbo_lqr_iterations_infinity_early.html  pbo_lqr_iterations_no_filtering.html  pbo_lqr_iterations_no_filtering_no_grad.html  pbo_lqr_iterations_no_grad.html  pbo_lqr_jax.ipynb  pbo_lqr_one_iteration.html  pbo_lqr_one_iteration.ipynb  pbo_lqr_one_iteration_infinity.html  pbo_lqr_one_iteration_no_filtering.html  pbo_lqr_one_iteration_one_weigths.ipynb  pbo_lqr_one_iteration_two_weigths.ipynb  pbo_lqr_pytorch.ipynb  pbo_lqr_several_iterations.ipynb  q_lqr_3D_q.ipynb  save.ipynb  setup.cfg  simple_1D_pbo_lqr_iterations.ipynb  simple_3D_pbo_lqr_iterations.ipynb  simple_lqr_train_q.ipynb  simple_pbo_lqr_iterations.html  simple_pbo_lqr_iterations.ipynb  simple_pbo_lqr_iterations_infinity.html  simple_pbo_lqr_one_iteration.html  simple_pbo_lqr_one_iteration.ipynb  simple_pbo_lqr_one_iteration_infinity.html  simple_pbo_lqr_several_iterations.ipynb
docker/: README.md
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
experiments/: __init__.py  parse_arguments.sh
experiments/acrobot/: DQN.py  DQN_evaluate.py  IDQN.py  IDQN_evaluate.py  PBO.py  PBO_evaluate.py  ProDQN.py  parameters.json  plots.ipynb  plots_loss.ipynb  summaries_results.ipynb  utils.py
experiments/atari/: DQN.py  ProDQN.py  parameters.json  plots.ipynb  plots_loss.ipynb
experiments/base/: DQN.py  FQI.py  IDQN.py  IFQI.py  PBO_offline.py  PBO_online.py  ProDQN.py  ProFQI.py  parser.py  print.py
experiments/bicycle/: FQI.ipynb  FQI.py  FQI_evaluate.py  IFQI.py  IFQI_evaluate.py  PBO.py  PBO_evaluate.py  PBO_linear_max_linear.py  parameters.json  plots.ipynb  plots_loss.ipynb  run_seeds_FQI.sh  run_seeds_PBO_deep.sh  run_seeds_PBO_linear.sh  sample.py  samples.ipynb  utils.py
experiments/bicycle_offline/: FQI_evaluate.py  IFQI.py  IFQI_evaluate.py  PBO.py  PBO_evaluate.py  parameters.json  plots.ipynb  plots_loss.ipynb  sample.py  utils.py
experiments/bicycle_online/: DQN.py  DQN_evaluate.py  FQI.py  IDQN.py  IDQN_evaluate.py  IFQI_evaluate.py  PBO.py  PBO_evaluate.py  parameters.json  plots.ipynb  plots_loss.ipynb  utils.py
experiments/car_on_hill/: FQI.py  FQI_evaluate.py  IFQI.py  IFQI_evaluate.py  PBO.py  PBO_evaluate.py  PBO_linear_max_linear.ipynb  ProFQI.py  ProFQI_evaluate.py  evaluate_seed.sh  parameters.json  plots.ipynb  plots_approx_error.ipynb  plots_loss.ipynb  plots_samples.ipynb  run_seeds.sh  run_seeds_optimal.sh  sample.py  tries.ipynb  utils.py
experiments/chain_walk/: FQI.py  FQI_evaluate.py  LSPI.py  PBO.py  PBO_evaluate.py  PBO_optimal_evaluate.py  parameters.json  plots.ipynb  plots_additional_experiments.ipynb  plots_loss.ipynb  run_seeds.sh  run_seeds_additional_experiments.sh  sample.py  utils.py
experiments/lqr/: FQI.ipynb  FQI.py  FQI_evaluate.py  LSPI.ipynb  LSPI.py  PBO.py  PBO_evaluate.py  PBO_optimal_evaluate.py  PBO_vector_field.py  optimal.ipynb  parameters.json  plots.ipynb  plots_loss.ipynb  run_seeds.sh  run_seeds_additional_experiments.sh  sample.py  utils.py  vector_field.ipynb
experiments/lunar_lander/: DQN.py  DQN_evaluate.py  IDQN.py  IDQN_evaluate.py  PBO.py  PBO_evaluate.py  ProDQN.py  parameters.json  plots.ipynb  plots_loss.ipynb  summaries_results.ipynb  tries.ipynb  utils.py
figure_specific/: parse_arguments.sh
figure_specific/LQR/: sample_gap.ipynb
figure_specific/bicycle/: FQI.ipynb  PBO_linear.ipynb  PBO_linear_max_linear.ipynb  PBO_linear_max_linear.py  parameters.json  plots.ipynb  plots_additional_experiments.ipynb  run_seeds.sh  run_seeds_FQI.sh  run_seeds_PBO_deep.sh  run_seeds_PBO_linear.sh  samples.ipynb
figure_specific/car_on_hill/: FQI.ipynb  FQI.sh  PBO_deep.ipynb  PBO_linear.ipynb  PBO_linear.sh  PBO_linear_max_linear.ipynb  optimal.ipynb  optimal.py  parameters.json  plots.ipynb  remove_data.sh  run_seeds.sh  run_seeds_optimal.sh  run_specific_seeds.sh  samples.ipynb
figure_specific/chain_walk/: FQI.ipynb  LSPI.ipynb  PBO_comparison.ipynb  PBO_comparison_plots.ipynb  PBO_comparison_seed.sh  PBO_linear.ipynb  PBO_max_linear.ipynb  PBO_max_linear_plots.ipynb  PBO_max_linear_seed.sh  PBO_optimal.ipynb  optimal.ipynb  parameters.json  plots.ipynb  plots_additional_experiments.ipynb  remove_data.sh  run_seeds.sh  run_seeds_additional_experiments.sh  run_specific_seeds.sh
figure_specific/lqr/: FQI.ipynb  LSPI.ipynb  PBO_custom_linear.ipynb  PBO_linear.ipynb  PBO_optimal.ipynb  SAVE.ipynb  optimal.ipynb  parameters.json  plots.ipynb  plots_SAVE.ipynb  plots_additional_experiments.ipynb  remove_data.sh  run_seeds.sh  run_seeds_additional_experiments.sh  run_specific_seeds.sh  sample_gap.ipynb  sample_gap_plots.ipynb  sample_gap_seed.sh
job_launcher/: launch_setup.sh  setup.sh
launch_job/: create_tmux.sh  parse_arguments.sh  setup.sh  test.py  test.sh
launch_job/acrobot/: evaluate_dqn.sh  evaluate_idqn.sh  evaluate_pbo_deep.sh  evaluate_pbo_linear.sh  grid_search_dqn.sh  grid_search_prodqn.sh  launch.sh  launch_dqn.sh  launch_gpu.sh  launch_local.sh  launch_local_dqn.sh  launch_local_prodqn.sh  launch_prodqn.sh  train_dqn.sh  train_idqn.sh  train_pbo_deep.sh  train_pbo_linear.sh  train_prodqn.sh
launch_job/atari/: launch_dqn.sh  launch_local_dqn.sh  launch_local_prodqn.sh  launch_prodqn.sh  train_dqn.sh  train_prodqn.sh
launch_job/bicycle/: collect_sample.sh  evaluate_fqi.sh  evaluate_ifqi.sh  evaluate_pbo_deep.sh  evaluate_pbo_linear.sh  launch.sh  launch_gpu.sh  launch_local.sh  train_fqi.sh  train_ifqi.sh  train_pbo_deep.sh  train_pbo_linear.sh
launch_job/bicycle_offline/: collect_sample.sh  evaluate_fqi.sh  evaluate_ifqi.sh  evaluate_pbo_deep.sh  evaluate_pbo_linear.sh  launch.sh  launch_gpu.sh  launch_local.sh  train_fqi.sh  train_ifqi.sh  train_pbo_deep.sh  train_pbo_linear.sh
launch_job/car_on_hill/: launch.sh  (+16 more)
tests/: q_max_value.ipynb
(+146 files in other folders)
