[metadata]
name = pbo
version = 0.1
description = Projected Bellman Operator (PBO). An attempt to learn a parametric Bellman Operator.
license = MIT
requires = 
    setuptools 
    wheel

[options]
packages = pbo, experiments
python_requires = >= 3.7
install_requires =
    dm-haiku==0.0.6 
    optax==0.1.2
    ipython==8.3.0
    ipykernel==6.13.0
    matplotlib==3.5.1
    tqdm==4.64.0
    ipywidgets==7.7.0
    jupyter==1.0.0
    pygame==2.1.3.dev8
    pytest==7.1.3
    joblib==1.2.0
    gymnasium[box2d]==0.27.0
    jaxlib==0.3.22
    moviepy==1.0.3
    decorator==4.4.2
    
[options.extras_require]
dev = 
    black==22.3.0
cpu =
    jax[cpu]==0.3.22

[options.entry_points]
console_scripts =
    edit_json = pbo.utils.edit_json:edit_json_cli
    car_on_hill_sample = experiments.car_on_hill.sample:run_cli
    car_on_hill_fqi = experiments.car_on_hill.FQI:run_cli
    car_on_hill_fqi_evaluate = experiments.car_on_hill.FQI_evaluate:run_cli
    car_on_hill_ifqi = experiments.car_on_hill.IFQI:run_cli
    car_on_hill_ifqi_evaluate = experiments.car_on_hill.IFQI_evaluate:run_cli
    car_on_hill_pbo = experiments.car_on_hill.PBO:run_cli
    car_on_hill_pbo_evaluate = experiments.car_on_hill.PBO_evaluate:run_cli
    lunar_lander_dqn = experiments.lunar_lander.DQN:run_cli
    lunar_lander_dqn_evaluate = experiments.lunar_lander.DQN_evaluate:run_cli
    lunar_lander_pbo = experiments.lunar_lander.PBO:run_cli

