[metadata]
name = pbo
version = 0.1
description = Projected Bellman Operator (PBO). An attempt to learn a parametric Bellman Operator.
license = MIT
requires = 
    setuptools 
    wheel

[options]
packages = pbo, experiments
python_requires = >= 3.7
install_requires =
    absl-py==1.2.0
    argon2-cffi==21.3.0
    argon2-cffi-bindings==21.2.0
    asttokens==2.0.8
    attrs==22.1.0
    backcall==0.2.0
    beautifulsoup4==4.11.1
    bleach==5.0.1
    box2d-py==2.3.5
    certifi==2022.12.7
    cffi==1.15.1
    charset-normalizer==2.1.1
    chex==0.1.5
    click==8.1.3
    cloudpickle==2.2.0
    cycler==0.11.0
    debugpy==1.6.3
    decorator==4.4.2
    defusedxml==0.7.1
    dill==0.3.5.1
    dm-haiku==0.0.6
    dm-tree==0.1.7
    entrypoints==0.4
    etils==0.8.0
    executing==1.1.1
    fastjsonschema==2.16.2
    fonttools==4.37.4
    gymnasium==0.27.0
    gymnasium-notices==0.0.1
    idna==3.4
    imageio==2.23.0
    imageio-ffmpeg==0.4.7
    importlib-metadata==5.0.0
    importlib-resources==5.10.0
    iniconfig==1.1.1
    ipykernel==6.13.0
    ipython==8.3.0
    ipython-genutils==0.2.0
    ipywidgets==7.7.0
    jax==0.3.22
    jax-jumpy==0.2.0
    jaxlib==0.3.22
    jedi==0.18.1
    Jinja2==3.1.2
    jmp==0.0.2
    jsonschema==4.16.0
    jupyter==1.0.0
    jupyter-client==7.4.2
    jupyter-console==6.4.4
    jupyter-core==4.11.1
    jupyterlab-pygments==0.2.2
    jupyterlab-widgets==3.0.3
    kiwisolver==1.4.4
    MarkupSafe==2.1.1
    matplotlib==3.5.1
    matplotlib-inline==0.1.6
    mistune==2.0.4
    moviepy==1.0.3
    multiprocess==0.70.13
    mypy-extensions==0.4.3
    nbclient==0.7.0
    nbconvert==7.2.1
    nbformat==5.7.0
    nest-asyncio==1.5.6
    notebook==6.4.12
    numpy==1.23.3
    opt-einsum==3.3.0
    optax==0.1.2
    packaging==21.3
    pandocfilters==1.5.0
    parso==0.8.3
    pathspec==0.10.1
    pexpect==4.8.0
    pickleshare==0.7.5
    Pillow==9.2.0
    pkgutil-resolve-name==1.3.10
    platformdirs==2.5.2
    pluggy==1.0.0
    proglog==0.1.10
    prometheus-client==0.14.1
    prompt-toolkit==3.0.31
    psutil==5.9.2
    ptyprocess==0.7.0
    pure-eval==0.2.2
    py==1.11.0
    pycparser==2.21
    pygame==2.1.3.dev8
    Pygments==2.13.0
    pyparsing==3.0.9
    pyrsistent==0.18.1
    pytest==7.1.3
    python-dateutil==2.8.2
    pyzmq==24.0.1
    qtconsole==5.3.2
    QtPy==2.2.1
    requests==2.28.1
    scipy==1.9.2
    Send2Trash==1.8.0
    Shimmy==0.2.0
    six==1.16.0
    soupsieve==2.3.2.post1
    stack-data==0.5.1
    swig==4.1.1
    tabulate==0.9.0
    terminado==0.16.0
    tinycss2==1.1.1
    tomli==2.0.1
    toolz==0.12.0
    tornado==6.2
    tqdm==4.64.0
    traitlets==5.4.0
    typing-extensions==4.4.0
    urllib3==1.26.13
    wcwidth==0.2.5
    webencodings==0.5.1
    widgetsnbextension==3.6.1
    zipp==3.9.0
    
[options.extras_require]
dev = 
    black==22.3.0

[options.entry_points]
console_scripts =
    lqr_sample = experiments.lqr.sample:run_cli
    lqr_fqi = experiments.lqr.FQI:run_cli
    lqr_fqi_evaluate = experiments.lqr.FQI_evaluate:run_cli
    lqr_pbo = experiments.lqr.PBO:run_cli
    lqr_pbo_evaluate = experiments.lqr.PBO_evaluate:run_cli
    lqr_pbo_optimal_evaluate = experiments.lqr.PBO_optimal_evaluate:run_cli
    chain_walk_sample = experiments.chain_walk.sample:run_cli
    chain_walk_fqi = experiments.chain_walk.FQI:run_cli
    chain_walk_fqi_evaluate = experiments.chain_walk.FQI_evaluate:run_cli
    chain_walk_pbo = experiments.chain_walk.PBO:run_cli
    chain_walk_pbo_evaluate = experiments.chain_walk.PBO_evaluate:run_cli
    chain_walk_pbo_optimal_evaluate = experiments.chain_walk.PBO_optimal_evaluate:run_cli
    car_on_hill_sample = experiments.car_on_hill.sample:run_cli
    car_on_hill_fqi = experiments.car_on_hill.FQI:run_cli
    car_on_hill_fqi_evaluate = experiments.car_on_hill.FQI_evaluate:run_cli
    car_on_hill_pbo = experiments.car_on_hill.PBO:run_cli
    car_on_hill_pbo_evaluate = experiments.car_on_hill.PBO_evaluate:run_cli
    bicycle_offline_sample = experiments.bicycle_offline.sample:run_cli
    bicycle_offline_fqi = experiments.bicycle_offline.FQI:run_cli
    bicycle_offline_fqi_evaluate = experiments.bicycle_offline.FQI_evaluate:run_cli
    bicycle_offline_pbo = experiments.bicycle_offline.PBO:run_cli
    bicycle_offline_pbo_evaluate = experiments.bicycle_offline.PBO_evaluate:run_cli
    bicycle_online_dqn = experiments.bicycle_online.DQN:run_cli
    bicycle_online_dqn_evaluate = experiments.bicycle_online.DQN_evaluate:run_cli
    bicycle_online_pbo = experiments.bicycle_online.PBO:run_cli
    bicycle_online_pbo_evaluate = experiments.bicycle_online.PBO_evaluate:run_cli
    lunar_lander_dqn = experiments.lunar_lander.DQN:run_cli
    lunar_lander_dqn_evaluate = experiments.lunar_lander.DQN_evaluate:run_cli
    lunar_lander_pbo = experiments.lunar_lander.PBO:run_cli
    lunar_lander_pbo_evaluate = experiments.lunar_lander.PBO_evaluate:run_cli

