[metadata]
name = pbo
version = 0.1
description = Projected Bellman Operator (PBO). An attempt to learn a parametric Bellman Operator.
license = MIT
requires = 
    setuptools 
    wheel

[options]
packages = pbo, experiments
python_requires = >= 3.7
install_requires =
    absl-py==1.4.0
    asttokens==2.2.1
    backcall==0.2.0
    box2d-py==2.3.5
    chex==0.1.82
    cloudpickle==2.2.1
    comm==0.1.4
    contourpy==1.1.0
    cycler==0.11.0
    debugpy==1.6.7.post1
    decorator==5.1.1
    etils==1.4.1
    executing==1.2.0
    Farama-Notifications==0.0.4
    flax==0.7.2
    fonttools==4.42.0
    gymnasium==0.29.0
    importlib-resources==6.0.1
    ipykernel==6.25.1
    ipython==8.14.0
    jax==0.4.14
    jaxlib==0.4.14
    jedi==0.19.0
    jupyter_client==8.3.0
    jupyter_core==5.3.1
    kiwisolver==1.4.4
    markdown-it-py==3.0.0
    matplotlib==3.7.2
    matplotlib-inline==0.1.6
    mdurl==0.1.2
    ml-dtypes==0.2.0
    msgpack==1.0.5
    nest-asyncio==1.5.7
    numpy==1.25.2
    nvidia-cublas-cu12==12.2.4.5
    nvidia-cuda-cupti-cu12==12.2.131
    nvidia-cuda-nvcc-cu12==12.2.128
    nvidia-cuda-nvrtc-cu12==12.2.128
    nvidia-cuda-runtime-cu12==12.2.128
    nvidia-cudnn-cu12==8.9.4.25
    nvidia-cufft-cu12==11.0.8.91
    nvidia-cusolver-cu12==11.5.1.129
    nvidia-cusparse-cu12==12.1.2.129
    nvidia-nvjitlink-cu12==12.2.128
    opt-einsum==3.3.0
    optax==0.1.7
    orbax-checkpoint==0.3.2
    packaging==23.1
    parso==0.8.3
    pexpect==4.8.0
    pickleshare==0.7.5
    Pillow==10.0.0
    platformdirs==3.10.0
    prompt-toolkit==3.0.39
    protobuf==4.24.0
    psutil==5.9.5
    ptyprocess==0.7.0
    pure-eval==0.2.2
    pygame==2.5.0
    Pygments==2.16.1
    pyparsing==3.0.9
    python-dateutil==2.8.2
    PyYAML==6.0.1
    pyzmq==25.1.1
    rich==13.5.2
    scipy==1.11.1
    six==1.16.0
    stack-data==0.6.2
    swig==4.1.1
    tensorstore==0.1.41
    toolz==0.12.0
    tornado==6.3.2
    tqdm==4.66.1
    traitlets==5.9.0
    typing_extensions==4.7.1
    wcwidth==0.2.6
    zipp==3.16.2
    
[options.extras_require]
dev = 
    black==22.3.0

[options.entry_points]
console_scripts =
    lqr_sample = experiments.lqr.sample:run_cli
    lqr_fqi = experiments.lqr.FQI:run_cli
    lqr_fqi_evaluate = experiments.lqr.FQI_evaluate:run_cli
    lqr_lspi = experiments.lqr.LSPI:run_cli
    lqr_pbo = experiments.lqr.PBO:run_cli
    lqr_pbo_evaluate = experiments.lqr.PBO_evaluate:run_cli
    lqr_pbo_optimal_evaluate = experiments.lqr.PBO_optimal_evaluate:run_cli
    chain_walk_sample = experiments.chain_walk.sample:run_cli
    chain_walk_fqi = experiments.chain_walk.FQI:run_cli
    chain_walk_fqi_evaluate = experiments.chain_walk.FQI_evaluate:run_cli
    chain_walk_lspi = experiments.chain_walk.LSPI:run_cli
    chain_walk_pbo = experiments.chain_walk.PBO:run_cli
    chain_walk_pbo_evaluate = experiments.chain_walk.PBO_evaluate:run_cli
    chain_walk_pbo_optimal_evaluate = experiments.chain_walk.PBO_optimal_evaluate:run_cli
    car_on_hill_sample = experiments.car_on_hill.sample:run_cli
    car_on_hill_fqi = experiments.car_on_hill.FQI:run_cli
    car_on_hill_fqi_evaluate = experiments.car_on_hill.FQI_evaluate:run_cli
    car_on_hill_ifqi = experiments.car_on_hill.IFQI:run_cli
    car_on_hill_ifqi_evaluate = experiments.car_on_hill.IFQI_evaluate:run_cli
    car_on_hill_pbo = experiments.car_on_hill.PBO:run_cli
    car_on_hill_pbo_evaluate = experiments.car_on_hill.PBO_evaluate:run_cli
    bicycle_offline_sample = experiments.bicycle_offline.sample:run_cli
    bicycle_offline_fqi = experiments.bicycle_offline.FQI:run_cli
    bicycle_offline_fqi_evaluate = experiments.bicycle_offline.FQI_evaluate:run_cli
    bicycle_offline_ifqi = experiments.bicycle_offline.IFQI:run_cli
    bicycle_offline_ifqi_evaluate = experiments.bicycle_offline.IFQI_evaluate:run_cli
    bicycle_offline_pbo = experiments.bicycle_offline.PBO:run_cli
    bicycle_offline_pbo_evaluate = experiments.bicycle_offline.PBO_evaluate:run_cli
    bicycle_online_dqn = experiments.bicycle_online.DQN:run_cli
    bicycle_online_dqn_evaluate = experiments.bicycle_online.DQN_evaluate:run_cli
    bicycle_online_idqn = experiments.bicycle_online.IDQN:run_cli
    bicycle_online_idqn_evaluate = experiments.bicycle_online.IDQN_evaluate:run_cli
    bicycle_online_pbo = experiments.bicycle_online.PBO:run_cli
    bicycle_online_pbo_evaluate = experiments.bicycle_online.PBO_evaluate:run_cli
    acrobot_dqn = experiments.acrobot.DQN:run_cli
    acrobot_prodqn = experiments.acrobot.ProDQN:run_cli
    lunar_lander_dqn = experiments.lunar_lander.DQN:run_cli
    lunar_lander_prodqn = experiments.lunar_lander.ProDQN:run_cli

